# blubber-ngn

./: 3d-test.c  CLAUDE.md  CMakeLists.txt  CnR.sh  README.md  asan.1419400  asan.1419747  fps-test.c  migrate.md  next-problem.txt  patchnotes.md  systems-refactor.txt
src/: engine.c  engine.h  engine_components.c  engine_components.h  engine_types.h  fog.fs  fog.vs  game.c  game.h  grid.c  main.c  map-maker.c  outline.fs  outline.vs  sound.c  sound.h  systems.c  systems.h
src/engine/ecs/: archetype.c  archetype.h  archetype_internal.h  component.c  component.h  component_internal.h  component_registry.c  component_registry.h  ecs.h  ecs_types.h  entity.c  entity.h  entity_internal.h  world.c  world.h  world_internal.h
src/engine/math/: aabb.h  capsule.h  collision_hit.h  collision_instance.c  collision_instance.h  collision_narrowphase.c  heightmap.c  heightmap.h  sphere.h  wall_segment.h
src/engine/memory/: memory_aligned.c  memory_aligned.h
src/engine/sound/: sound.c  sound.h
src/engine/util/: bitset.c  bitset.h  json_reader.c  json_reader.h
src/game/: archetype_loader.c  archetype_loader.h  component_registry_setup.c  component_registry_setup.h  ecs_get.h  editor.c  editor.h  engine_init.c  game.h  game_loop.c  gamestate.c  gamestate.h  gametypes.h  level_creater_helper.c  level_creater_helper.h  main.c  world_spawn.c  world_spawn.h
src/game/components/: Active.h  ai_targets.h  bullet_owner.h  bullets.h  capsule.h  collision.h  combat_state.h  components.h  coolant.h  drone_state.h  enemy_spawner.h  event_triggers.h  health.h  health_orb.h  infobox.h  melee_state.h  movement.h  muzzle.h  particle.h  renderable.h  shield.h  target_dummy.h  timer.h  transform.h
src/game/nav_grid/: nav.c  nav.h
src/game/systems/: blunderbuss_system.c  bullet_system.c  collision_updates_system.c  coolant_system.c  drone_system.c  enemyPathingSystem.c  enemy_behaviour.h  enemy_shooting_system.c  health_orb_system.c  infobox_system.c  melee_system.c  message_system.c  message_system.h  movement_collision_system.c  movement_system.c  particle_system.c  physics_system.c  player_control_system.c  render_system.c  systems.h  target_system.c  timer_system.c  wave_system.c  wave_system.h
src/systems/: ai_system.c  banner_system.c  collision_system.c  death_system.c  menu_system.c  particle_system.c  physics_system.c  player_system.c  projectile_system.c  raycast_system.c  render_system.c  systems.c  systems.h
whalefall/: movement.c
